--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    scrollbar-color: yellow;
+}
 .slide {
     position: absolute;
     top: 0;
