finished project section

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
     scroll-behavior: smooth;
     scrollbar-color: yellow;
 }
+html {
+    scroll-snap-type: y mandatory;
+}
+
+section {
+    scroll-snap-align: start;
+}
 .slide {
     position: absolute;
     top: 0;
