--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,40 @@ section {
     padding: 35px;
 }
 
+.corner{
+    position: relative;
+}
+
+.corner::after, .corner::before{
+    content: "";
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    
+}
+
+.corner::before{
+
+    
+    left: -10px;
+    top: -10px;
+    border-left: 2px solid white;
+    border-top: 2px solid white;
+}
+.corner::after{
+
+    
+    right: -10px;
+    bottom: -10px;
+    border-right: 2px solid white;
+    border-bottom: 2px solid white;
+}
+
+
+
+
+
+
 
 
 
